fixed Travis config after adding actor-based in-memory fake repo
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala: 2.11.4
 env:
   global:
   - PKG=edu.luc.etl.cs313.scala.clickcounter.service
-script: sbt coverage "testOnly $PKG.api.ConcreteApiSpec $PKG.api.HerokuHttpSpec $PKG.api.ApiaryHttpSpec $PKG.model.CounterSpec $PKG.repository.InMemoryRepositorySpec $PKG.ActorInMemoryRepositorySpec"
+script: sbt coverage "testOnly $PKG.api.ConcreteApiSpec $PKG.api.HerokuHttpSpec $PKG.api.ApiaryHttpSpec $PKG.model.CounterSpec $PKG.repository.InMemoryRepositorySpec $PKG.repository.ActorInMemoryRepositorySpec"
 after_success: sbt coveralls
 deploy:
   provider: heroku
