--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ scala: 2.11.8
 env:
   global:
   - PKG=edu.luc.etl.cs313.scala.clickcounter.service
-script: sbt coverage "testOnly $PKG.api.ConcreteApiSpec $PKG.api.HerokuHttpSpec $PKG.api.ApiaryHttpSpec $PKG.model.CounterSpec $PKG.repository.InMemoryRepositorySpec $PKG.repository.ActorInMemoryRepositorySpec" test coverageReport
+script: sbt coverage "testOnly $PKG.api.ConcreteApiSpec $PKG.api.HerokuHttpSpec $PKG.api.ApiaryHttpSpec $PKG.model.CounterSpec $PKG.repository.InMemoryRepositorySpec $PKG.repository.ActorInMemoryRepositorySpec" coverageReport
 after_success: bash <(curl -s https://codecov.io/bash)
 deploy:
   provider: heroku
